# tun-installer

./: .gitignore  Cargo.toml  DOCUMENT.md  README.md  angular.json  build_window.bat  compress-algorithm.md  package-lock.json  package.json  scripts.md  tsconfig.json
projects/installer-builder/src-tauri/: .tunins  Cargo.toml  tauri.conf.json
projects/installer-builder/src-tauri/capabilities/: default.json
projects/installer-builder/src-tauri/configs/: config.json
projects/installer-builder/src-tauri/icons/: icon.icns
projects/installer-builder/src-tauri/src/: lib.rs
projects/installer-builder/src-tauri/src/adapters/: mod.rs  tauri_progress.rs
projects/installer-builder/src-tauri/src/cli/: app_args.rs  mod.rs
projects/installer-builder/src-tauri/src/commands/: compress_commands.rs  html_engine_commands.rs  installer_config_commands.rs  metadata_command.rs  mod.rs  prerequisite_commands.rs  project_mananager_command.rs  project_state_commands.rs  resource_folder_commands.rs  window_commands.rs
projects/installer-builder/src-tauri/src/consts/: folders.rs  mod.rs
projects/installer-builder/src-tauri/src/events/: compress_events.rs  mod.rs
projects/installer-builder/src-tauri/src/helpers/: mod.rs  resource_helper.rs  xml_helper.rs
projects/installer-builder/src-tauri/src/models/: app_model.rs  compress.rs  html_page.rs  installer_config.rs  installer_document.rs  installer_properties.rs  mod.rs  project_manager_model.rs  registry.rs  window_info.rs
projects/installer-builder/src-tauri/src/services/: compress_installer_service.rs  compress_service.rs  (+6 more)
(+357 files in other folders)
