[package]
name = "installer_builder"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "installer_builder"
path = "src/main.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
tauri-plugin-dialog = "2"
async-recursion = "1.0"
walkdir = "2"
bincode = "1"
zstd = "0.13"
quick-xml = { version = "0.31", features = ["serialize"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }

domain = { path = "../../../libs/rust/domain" }
service = { path = "../../../libs/rust/service" }
helpers = { path = "../../../libs/rust/helpers" }

